--- a/style.css
+++ b/style.css
@@ -8,17 +8,15 @@
 }
 @keyframes borderBlink {
   50% {
-    border-color: initial;
-    border-width: 1px;
+    border-color: transparent;
   }
 }
 .answer-buttons-container {
   display: flex;
   flex-wrap: wrap;
-  /* align-items: flex-start; */
-  /* height: 200px; */
   align-items: center;
   justify-content: center; 
+  max-width: 600px;
 }
 
 .answer-buttons-container > input {
