--- a/landing/landing.scss
+++ b/landing/landing.scss
@@ -14,7 +14,17 @@ footer {
   position: absolute;
   left: 0;
   bottom: 0;
-  height: 100px;
+  height: 20px;
+  width: 100%;
+  overflow: hidden;
+}
+
+header {
+  background-color: cyan;
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 20px;
   width: 100%;
   overflow: hidden;
 }
