--- a/style.css
+++ b/style.css
@@ -15,17 +15,17 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: center; 
+  justify-content: center;
   max-width: 600px;
 }
 
 .answer-buttons-container > input {
   align-items: flex-end;
   flex: 1 0 calc(10% - 10px);
-  
 }
 
-input[type=button], input[type=submit] {
+input[type='button'],
+input[type='submit'] {
   margin: 5px;
   min-width: 44px;
   height: 44px;
@@ -41,10 +41,14 @@ input[type=button], input[type=submit] {
   filter: brightness(85%);
 }
 
-.block{
+.block {
   display: block;
 }
 
 .center {
   text-align: center;
+}
+.selected {
+  font-weight: 800;
+  font-size: larger;
 }
